--- a/Kavek/Kavek/Properties/Resources.resx
+++ b/Kavek/Kavek/Properties/Resources.resx
@@ -121,4 +121,7 @@
   <data name="kavebab" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\bin\Debug\kavebab.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="kaveikon" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\bin\Debug\kaveikon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
